objects/tmpAgent_Agency_List__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentFname__c</fullName>
        <label>AgentFname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentLname__c</fullName>
        <label>AgentLname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentMI__c</fullName>
        <label>AgentMI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_id__c</fullName>
        <label>Agent_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_licno__c</fullName>
        <label>Agent_licno</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aliases__c</fullName>
        <label>Aliases</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Date__c</fullName>
        <label>Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pri_Regno__c</fullName>
        <label>Pri_Regno</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <label>account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>record_id__c</fullName>
        <label>record id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>tmpAgent Agency List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pri_Regno__c</columns>
        <columns>Agent_licno__c</columns>
        <columns>Exam_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Percent__c</columns>
        <columns>status__c</columns>
        <columns>Agent_id__c</columns>
        <columns>AgentFname__c</columns>
        <columns>AgentLname__c</columns>
        <columns>AgentMI__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Agent Agency List</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tmpAgent Agency List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>